--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.3",
     "sass": "^1.83.4",
+    "sweetalert2": "^11.15.10",
     "web-vitals": "^4.2.4",
     "yup": "^1.6.1"
   },
